hphp/hack/test/typecheck/named_parameters/named_params_errors.php.exp
ERROR: File "named_params_errors.php", line 7, characters 20-21:
Invalid argument (Typing[4110])
  File "named_params_errors.php", line 3, characters 37-42:
  Expected `string`
  File "named_params_errors.php", line 7, characters 20-21:
  But got `int`
ERROR: File "named_params_errors.php", line 10, characters 28-36:
Invalid argument (Typing[4110])
  File "named_params_errors.php", line 3, characters 21-23:
  Expected `int`
  File "named_params_errors.php", line 10, characters 28-36:
  But got `string`
ERROR: File "named_params_errors.php", line 13, characters 3-26:
Too few arguments (required 1 but got 0) (Typing[4104])
  File "named_params_errors.php", line 3, characters 10-19:
  Definition is here
ERROR: File "named_params_errors.php", line 16, characters 3-32:
Missing required named argument: label (Typing[4499])
  File "named_params_errors.php", line 3, characters 10-19:
  Definition is here
ERROR: File "named_params_errors.php", line 16, characters 3-32:
Unexpected named argument: unknown (Typing[4500])
  File "named_params_errors.php", line 3, characters 10-19:
  Definition is here
